--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Megrim&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Megrim&family=Montserrat&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Megrim&family=Montserrat&family=Trirong:wght@500&display=swap"
       rel="stylesheet"
     />
     <!--
